# google-calendar-prayer-times

./: .env.sample  .flake8  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-style.yml  create-events.yml  main.yml
docs/: Google_Calendar_API_Service_Account.md
src/: script.py
tests/: test_script_cli.py  test_script_utils.py
