[tool.poetry]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "0.28.1"
python-dotenv = "1.0"
google-api-python-client = "2.153.0"
google-auth-httplib2 = "0.2.0"
python-dateutil = "2.9.0.post0"
google-auth = "2.36.0"

[tool.poetry.group.dev.dependencies]
types-python-dateutil = "2.9.0.20241003"
mypy = "1.11"
flake8 = "7.1"
black = "24.4"
isort = "5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
